fixed spacing issue with the offerings table

--- a/app/src/dialogs/courseInfo/courseInfo.scss
+++ b/app/src/dialogs/courseInfo/courseInfo.scss
@@ -239,8 +239,10 @@
               .an-offering {
                 width: 5px;
                 height: 5px;
-                background: $text-accent;
                 margin-right: 15px;
+                &.filled {
+                  background: $text-accent;
+                }
               }
             }
           }
